# zwom

./: .bumper.toml  .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: lint_test.yml  pypi_release.yml
.gitlab/workflows/: gitlab-ci.yml
tests/: test_comments.py  test_parser.py  test_serialize.py  test_validation.py
zwo/: cli.py  interpreter.py  parser.py  serialize.py
