[tool.poetry]
name = "Py-Template"
version = "0.1.0"
description = "It's a Python project template!"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/sco1/"
repository = "https://github.com/sco1/py-template"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.8"
bump2version = "^1.0"
flake8 = "^5.0"
flake8-annotations = "^2.9"
flake8-bugbear = "^22.9"
flake8-docstrings = "^1.6"
flake8-fixme = "^1.1"
isort = "^5.10"
mypy = "^0.982"
pep8-naming = "^0.13"
pre-commit = "^2.20"
pytest = "^7.1"
pytest-check = "^1.0"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"
tox = "^3.26"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "py-template,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
